--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest-sorted": "^1.0.15"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "pg": "^8.14.1",
@@ -38,7 +39,8 @@
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "jest-extended/all"
+      "jest-extended/all",
+      "jest-sorted"
     ]
   }
 }
